SMP: Identity address information (opcode 0x09) not dissected.
This issue was migrated from bug 10299 in our old bug tracker.
Original bug information:
Reporter: Øyvind Rønningstad
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: unspecified
Attachments:
SMP_identitiy_address_info.pcapng: Capture file with an affected packet, must be viewed with separate dissector.
nordic_ble.dll: Dissector that must be used to view capture file.